# Text2UI

./: .gitignore  README.md  pyproject.toml  temp.patch
configs/: ui_pipeline.yaml  voice_pipeline.yaml
data/icons/: README.md  manifest.json
data/prompts/: gemini_dataset_prompt.txt  gemini_dataset_prompt2.txt  gemini_dataset_prompt3.txt  gemini_dataset_prompt4.txt  gemini_dataset_prompt_actions_icons.txt  voice_prompts_seed.jsonl
data/samples/: agent.css  agent2.css  scenario.txt  scenario2.txt  voice_assistant_outputs.jsonl  voice_to_ui_components.jsonl
data/samples/text2ui-2/: text2ui_100-2.json  text2ui_100-4.json  text2ui_100.json  text2ui_50.json  (+4 more)
scripts/: convert_qwen_to_gguf.py  create_conda_env.sh  create_venv_env.sh  download_qwen_models.py  extract_icon_names.py  extract_icon_names_qwen3vl.py  extract_icon_names_vllm.py  finetune_qwen.py  generate_gemini_dataset.py  generate_ui_dataset.py  generate_voice_dataset.py  mlp_training.py  run_full_pipeline.py  split_images_into_folders.py  upload_folder_odc_sftp.py  visualize_dataset.py
scripts/icon_dataset_pipeline/: __init__.py  build_gui_owl_dataset.py  build_icon_dataset.py  count_icon_labels.py  detect_ui_elements.py  draw_icon_boxes.py  ui_label_names.json
src/text2ui/: __init__.py  config.py  llm.py  prompt_bank.py  stub_generators.py  ui_pipeline.py  utils.py  voice_pipeline.py
tests/: test_env_scripts.py
tmp_outputs/: gemini_test.cache.jsonl  gemini_test.json
whl/: tiktoken-0.11.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  xformers-0.0.29.post2-cp310-cp310-linux_x86_64.whl
(+8 files in other folders)
